--- a/Notebooks/NewExperiments/NExperiment_1_NN.ipynb
+++ b/Notebooks/NewExperiments/NExperiment_1_NN.ipynb
@@ -1284,6 +1284,70 @@
     {
       "cell_type": "code",
       "source": [
+        "model_nn = models.PseudoLinearModel(\n",
+        "    advection_equations.FiniteDifferenceAdvection(0.08), \n",
+        "    coarse_grid,\n",
+        "    num_time_steps=10,  # multi-step loss function\n",
+        "    stencil_size=4, kernel_size=(7, 1), num_layers=4, filters=32,\n",
+        "    constrained_accuracy_order=0, \n",
+        "    learned_keys = {'concentration_x', 'concentration_y'},  # finite volume view, use edge concentration\n",
+        "    activation='relu',\n",
+        ")\n",
+        "model_nn.learned_keys, model_nn.fixed_keys\n",
+        "\n",
+        "## CHECK VALUE OF dt IN model_nn\n",
+        "advection_equations.FiniteDifferenceAdvection(0.08).get_time_step(coarse_grid,1.) == dt"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xeWjkloEY7lu",
+        "outputId": "a58d86ec-ef09-43ac-9741-bbf4014bd17c"
+      },
+      "execution_count": 214,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 214
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_nn(inputs=initial_state).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vRe7j-8DZomJ",
+        "outputId": "855b1e1a-592f-488f-f9f0-78f95f245335"
+      },
+      "execution_count": 215,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([Dimension(1), Dimension(10), Dimension(64), Dimension(1)])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 215
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "for i in range(8):\n",
         "  print(model_nn.get_weights()[i].shape)"
       ],
@@ -1292,25 +1356,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ssfiaj1sW6R3",
-        "outputId": "8170698e-13af-4a10-c817-639f077a2fbe"
+        "outputId": "369fa2cd-3657-467b-90c0-8d55662ff0b0"
       },
-      "execution_count": 156,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(3, 1, 3, 32)\n",
+            "(7, 1, 3, 32)\n",
             "(32,)\n",
-            "(3, 1, 32, 32)\n",
+            "(7, 1, 32, 32)\n",
             "(32,)\n",
-            "(3, 1, 32, 32)\n",
+            "(7, 1, 32, 32)\n",
             "(32,)\n",
-            "(3, 1, 32, 12)\n",
-            "(12,)\n"
+            "(7, 1, 32, 18)\n",
+            "(18,)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "()"
+      ],
+      "metadata": {
+        "id": "d6bMTvlVegRP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
