Problem cruux reach

--- a/Final_Experiments/UnderstandNN.ipynb
+++ b/Final_Experiments/UnderstandNN.ipynb
@@ -32,12 +32,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 35
         },
         "id": "JXsLKcxVjLSC",
-        "outputId": "4e180c7f-54db-4c3f-ea9b-84371fe5a395"
+        "outputId": "350c68ad-5705-4f73-848f-d3b38a61afef"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -50,7 +51,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 2
         }
       ]
     },
@@ -67,9 +68,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lTEysHZujSQn",
-        "outputId": "94511013-588b-47ee-d808-388e37ab44e8"
+        "outputId": "8887e3e1-e156-4c18-b07e-ce8a61c9e677"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "zJ5hYqXR3JZL"
       },
@@ -199,12 +200,12 @@
       "metadata": {
         "id": "-nXUpqBca-Px"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "OclDxiIKGToc"
       },
@@ -318,7 +319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "LCgfgEamtiIh"
       },
@@ -366,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "id": "VkKCXDd0GfCX"
       },
@@ -477,9 +478,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tiAU7k298_VL",
-        "outputId": "e10f1539-b710-42c4-a70f-e72af9a6d396"
+        "outputId": "bb4b1610-a833-4d1a-d757-f033798659a5"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +500,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -514,9 +515,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dj4HtHfVzc7M",
-        "outputId": "571c8960-be83-49a0-9389-0afc91a773b8"
+        "outputId": "7b64a6b7-8436-4b27-9d6d-bc1ad17ce6ff"
       },
-      "execution_count": 17,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +535,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 10
         }
       ]
     },
@@ -551,9 +552,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALtPWylO0Oze",
-        "outputId": "e54bc9ea-324a-40f0-ec86-4c506f679b4c"
+        "outputId": "fc42769f-e9e1-456d-fd2b-e3a61ddfe133"
       },
-      "execution_count": 23,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,9 +581,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aZMj3rS3ztQ4",
-        "outputId": "4096cfe9-e9ed-4d83-b158-28da8b4d362d"
+        "outputId": "38f501c0-92c9-4c72-8187-1f2e8690ecbe"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -592,7 +593,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -602,10 +603,29 @@
         "'First analyze method _apply_model of PseudoLinearMode Class'"
       ],
       "metadata": {
-        "id": "9dmVMLa-2vUu"
+        "id": "9dmVMLa-2vUu",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4c3080ac-b56e-451a-a6a2-bd1b40a78917"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'First analyze method _apply_model of PseudoLinearMode Class'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -640,7 +660,7 @@
       "metadata": {
         "id": "uIxa0tO_3a60"
       },
-      "execution_count": 25,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -656,9 +676,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ngHtGpup4ThF",
-        "outputId": "236561ff-b0c4-4736-b584-1000799dd46d"
+        "outputId": "e60681c3-16c9-48b4-cca0-31d2868964a2"
       },
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +693,9 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "'Check function stack_dict'\n",
+        "stack_ls=stack_dict(initial_state)\n",
         "print(stack_dict(initial_state).shape)\n",
         "'''Stacks initial_state concen,x-vel,y-vel in alphabetical order\n",
         "along last axis'''\n",
@@ -684,9 +706,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "M3KAGrCm4Zq0",
-        "outputId": "c87ca14a-27fb-4d40-c397-5197af0f370e"
+        "outputId": "85fe9c5f-02a6-4e12-c99c-7ca0c773a25c"
       },
-      "execution_count": 35,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +725,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 30
         }
       ]
     },
@@ -721,9 +743,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c3eW4CMF5Jxd",
-        "outputId": "4dbe914c-677e-4168-c3f4-38ca8bea9351"
+        "outputId": "cc00df81-a8f3-41a8-d4b0-62c4bd125881"
       },
-      "execution_count": 45,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,7 +793,7 @@
       "metadata": {
         "id": "2EBVrt8Y5pej"
       },
-      "execution_count": 40,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -781,6 +803,10 @@
         "print(type(m1(initial_state)))\n",
         "m1.add(tf.keras.layers.Lambda(stack_dict))\n",
         "print(type(m1(initial_state)))\n",
+        "print(m1(initial_state).shape)\n",
+        "# layer1=models.Conv2DPeriodic(filters=9, kernel_size=(3.1), activation='relu')\n",
+        "layer1= tf.keras.layers.Conv2D(filters=9, kernel_size=(7,1), activation='relu')\n",
+        "m1.add(layer1)\n",
         "print(m1(initial_state).shape)"
       ],
       "metadata": {
@@ -788,9 +814,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dOxv5rGu6OvH",
-        "outputId": "9adead02-1044-4741-fe00-65d91f8990cd"
+        "outputId": "173030e0-b50d-42c0-fa83-0c9dba4ed9b6"
       },
-      "execution_count": 49,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,8 +824,89 @@
           "text": [
             "<class 'dict'>\n",
             "<class 'tensorflow.python.framework.ops.EagerTensor'>\n",
-            "(1, 64, 1, 3)\n"
+            "(1, 64, 1, 3)\n",
+            "(1, 58, 1, 9)\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'Analyze Conv2dPeriodic class '\n",
+        "in_sh=stack_ls.shape\n",
+        "print(in_sh)\n",
+        "print(in_sh[:-1]+(9,)) # For 9 filters used in convolution"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k9Va1bR62DoM",
+        "outputId": "a194a328-a6af-4de2-b757-03acf2dd971d"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 64, 1, 3)\n",
+            "(1, 64, 1, 9)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "liVXtSDiiI6O",
+        "outputId": "97313d54-217c-4c37-c571-5d36e1fc162f"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([Dimension(3), Dimension(64), Dimension(1), Dimension(3)])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tensor_ops.pad_periodic_2d(stack_ls,))\n",
+        "tensor_ops._pad_periodic_by_axis(stack_ls, [1, 1],1).shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mpmQ15PWfuh8",
+        "outputId": "32109b99-be64-4fa5-90e6-f268cfd9c158"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TensorShape([Dimension(1), Dimension(66), Dimension(1), Dimension(3)])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
         }
       ]
     },
